# Stm32f1_rust_can

./: Cargo.toml  README.md
embassy/can_echo/: Cargo.toml
embassy/can_echo/.cargo/: config.toml
embassy/can_echo/src/: main.rs
embassy/can_uart/: Cargo.toml  Embded_toml  build_rs
embassy/can_uart/.cargo/: config.toml
embassy/can_uart/src/: main.rs
rtic/can_echo/src/: main.rs
rtic/can_uart/: README.md
src/: main.rs
