#cargo-features = ["edition2021"]
[package]
name = "stm32f1_can-send"
version = "0.1.0"
authors = ["joao404 <marcel@maage.online>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
embedded-hal = "0.2.5"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
cortex-m-semihosting = "0.3.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
bxcan = "0.4.0"
stm32f1xx-hal = {git = "https://github.com/stm32-rs/stm32f1xx-hal", branch = "master", features = ["rt", "stm32f103", "medium"]}
cortex-m-rtic = "0.6.0-rc.4"
dwt-systick-monotonic = "0.1.0-rc.2"
heapless = "0.7.0"
pid = "3.0.0"

#[dependencies.num-traits]
#version = "0.2.14"
#default-features = false

#[dependencies.stm32f1xx-hal]
#version = "0.7.0"
#features = ["rt", "stm32f103", "medium"]

#[features.stm32f1xx-hal]
#features = ["rt", "stm32f103", "medium"]

